<?xml version="1.0"?>
<package format="3">
  <name>recast_navigation</name>
  <version>0.0.0</version>
  <description>REP-136 compliant wrapper for Recast</description>
  <maintainer email="tbd@tbd.tbd">tbd</maintainer>

  <license>Zlib</license>

  <url type="website">https://github.com/recastnavigation/recastnavigation/</url>

  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
